Add support for local profiles directory in FHIR Package Snapshot Tool